--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -124,6 +124,7 @@ ja:
       wrong_length: は%{count}文字で入力してください。
       other_than: は%{count}以外の値にしてください。
       only_half_alphanumeric: は半角英数で入力してください。
+      bot_api: 不正なAPIリクエストです。
     template:
       body: 次の項目を確認してください。
       header:
